--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,24 +52,32 @@ variables:
 # Trigger subpipelines:
 quartz-build-and-test:
   stage: sub-pipelines
+  inherit:
+    variables: true
   trigger:
     include: .gitlab/quartz-build-and-test.yml
     strategy: depend
 
 quartz-baseline:
   stage: sub-pipelines
+  inherit:
+    variables: true
   trigger:
     include: .gitlab/quartz-baseline.yml
     strategy: depend
 
 lassen-build-and-test:
   stage: sub-pipelines
+  inherit:
+    variables: true
   trigger:
     include: .gitlab/lassen-build-and-test.yml
     strategy: depend
 
 corona-build-and-test:
   stage: sub-pipelines
+  inherit:
+    variables: true
   trigger:
     include: .gitlab/corona-build-and-test.yml
     strategy: depend
