In Gitlab CI, test another tweak

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,22 +39,22 @@ variables:
 # Defines the default choice for updating the saved baseline results. By default
 # the baseline can only be updated from the master branch. This variable offers
 # the option to manually ask for rebaselining from another branch if necessary.
-  REBASELINE: "NO"
-  AUTOTEST: "NO"
+  # REBASELINE: "NO"  # keep commented out
+  # AUTOTEST: "NO"    # keep commented out
   # AUTOTEST_COMMIT: used only when AUTOTEST is set to YES.
-  # * If AUTOTEST_COMMIT is set to YES (default), reporting jobs will commit
-  #   their files to the MFEM/autotest repo.
-  # * If AUTOTEST_COMMIT is set to NO, reporting jobs will NOT commit their
+  # * If AUTOTEST_COMMIT is set to YES, reporting jobs will commit their files
+  #   to the MFEM/autotest repo.
+  # * If AUTOTEST_COMMIT is NOT set to YES, reporting jobs will NOT commit their
   #   files to the MFEM/autotest repo. Instead they will just show the contents
   #   of the report files and remove them.
-  AUTOTEST_COMMIT: "YES"
+  # AUTOTEST_COMMIT: "NO"   # keep commented out
 
 # Trigger subpipelines:
 quartz-build-and-test:
   stage: sub-pipelines
-  variables:
-    AUTOTEST: "${AUTOTEST}"
-    AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
+  # variables:
+  #   AUTOTEST: "${AUTOTEST}"
+  #   AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
   trigger:
     include: .gitlab/quartz-build-and-test.yml
     strategy: depend
@@ -62,6 +62,7 @@ quartz-build-and-test:
 quartz-baseline:
   stage: sub-pipelines
   variables:
+    REBASELINE: "${REBASELINE}"
     AUTOTEST: "${AUTOTEST}"
     AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
   trigger:
