In Gitlab CI, apply another set of tweaks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,22 +39,24 @@ variables:
 # Defines the default choice for updating the saved baseline results. By default
 # the baseline can only be updated from the master branch. This variable offers
 # the option to manually ask for rebaselining from another branch if necessary.
-  # REBASELINE: "NO"  # keep commented out
-  # AUTOTEST: "NO"    # keep commented out
+  REBASELINE: "NO"
+  AUTOTEST: "NO"
   # AUTOTEST_COMMIT: used only when AUTOTEST is set to YES.
-  # * If AUTOTEST_COMMIT is set to YES, reporting jobs will commit their files
-  #   to the MFEM/autotest repo.
-  # * If AUTOTEST_COMMIT is NOT set to YES, reporting jobs will NOT commit their
+  # * If AUTOTEST_COMMIT is NOT set to NO, reporting jobs will commit their
+  #   files to the MFEM/autotest repo.
+  # * If AUTOTEST_COMMIT is set to NO, reporting jobs will NOT commit their
   #   files to the MFEM/autotest repo. Instead they will just show the contents
   #   of the report files and remove them.
-  # AUTOTEST_COMMIT: "NO"   # keep commented out
+  AUTOTEST_COMMIT: "YES"
 
 # Trigger subpipelines:
 quartz-build-and-test:
   stage: sub-pipelines
-  # variables:
-  #   AUTOTEST: "${AUTOTEST}"
-  #   AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
+  variables:
+    # Explicitly pass down values that we want to be able to set when triggering
+    # pipelines manually or using scheduling
+    AUTOTEST: "${AUTOTEST}"
+    AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
   trigger:
     include: .gitlab/quartz-build-and-test.yml
     strategy: depend
@@ -62,6 +64,8 @@ quartz-build-and-test:
 quartz-baseline:
   stage: sub-pipelines
   variables:
+    # Explicitly pass down values that we want to be able to set when triggering
+    # pipelines manually or using scheduling
     REBASELINE: "${REBASELINE}"
     AUTOTEST: "${AUTOTEST}"
     AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
@@ -72,6 +76,8 @@ quartz-baseline:
 lassen-build-and-test:
   stage: sub-pipelines
   variables:
+    # Explicitly pass down values that we want to be able to set when triggering
+    # pipelines manually or using scheduling
     AUTOTEST: "${AUTOTEST}"
     AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
   trigger:
@@ -81,6 +87,8 @@ lassen-build-and-test:
 corona-build-and-test:
   stage: sub-pipelines
   variables:
+    # Explicitly pass down values that we want to be able to set when triggering
+    # pipelines manually or using scheduling
     AUTOTEST: "${AUTOTEST}"
     AUTOTEST_COMMIT: "${AUTOTEST_COMMIT}"
   trigger:
