Add example of weighted LOR projection for momentum conservation

--- a/miniapps/tools/CMakeLists.txt
+++ b/miniapps/tools/CMakeLists.txt
@@ -27,3 +27,6 @@ add_mfem_miniapp(convert-dc
 
 add_mfem_miniapp(lor-transfer
   MAIN lor-transfer.cpp LIBRARIES mfem)
+
+add_mfem_miniapp(lor-transfer-momentum
+  MAIN lor-transfer-momentum.cpp LIBRARIES mfem)
