--- a/.gitignore
+++ b/.gitignore
@@ -260,7 +260,9 @@ miniapps/tools/display-basis
 miniapps/tools/load-dc
 miniapps/tools/convert-dc
 miniapps/tools/lor-transfer
+miniapps/tools/lor-transfer-momentum
 miniapps/tools/get-values
+miniapps/tools/ParaView
 
 miniapps/toys/automata
 miniapps/toys/life
