refactoring optimal_design example

--- a/miniapps/pdeopt/makefile
+++ b/miniapps/pdeopt/makefile
@@ -29,7 +29,7 @@ PDEOPT_COMMON_SRC =
 
 PDEOPT_COMMON_OBJ = $(PDEOPT_COMMON_SRC:.cpp=.o)
 
-SEQ_MINIAPPS = distributed_control optimal_design optimal_design_OUU
+SEQ_MINIAPPS = distributed_control optimal_design optimal_design_OUU optimal_design_OUU_2
 PAR_MINIAPPS = 
 ifeq ($(MFEM_USE_MPI),NO)
    MINIAPPS = $(SEQ_MINIAPPS)
