--- a/tests/benchmarks/makefile
+++ b/tests/benchmarks/makefile
@@ -12,7 +12,7 @@
 # Use the MFEM build directory
 MFEM_DIR ?= ../..
 MFEM_BUILD_DIR ?= ../..
-SRC = $(if $(MFEM_DIR:../../..=),$(MFEM_DIR)/tests/benchmarks/,)
+SRC = $(if $(MFEM_DIR:../..=),$(MFEM_DIR)/tests/benchmarks/,)
 CONFIG_MK = $(MFEM_BUILD_DIR)/config/config.mk
 
 MFEM_LIB_FILE = mfem_is_not_built
