--- a/examples/dpg_tests/makefile
+++ b/examples/dpg_tests/makefile
@@ -18,7 +18,8 @@ CONFIG_MK = $(MFEM_BUILD_DIR)/config/config.mk
 MFEM_LIB_FILE = mfem_is_not_built
 -include $(CONFIG_MK)
 
-SEQ_EXAMPLES = diffusion_blkfosls diffusion_fosls diffusion_primal_dpg grad_div_primal_dpg block_primal_dpg
+SEQ_EXAMPLES = diffusion_blkfosls diffusion_fosls diffusion_primal_dpg \
+	 grad_div_primal_dpg	block_primal_dpg diffusion_uwdpg
 PAR_EXAMPLES = 
 
 ifeq ($(MFEM_USE_MPI),NO)
