--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -38,7 +38,7 @@ list(APPEND ALL_EXE_SRCS
   ex28.cpp
   ex29.cpp
   ex30.cpp
-  ex31_proposed.cpp
+  ex31.cpp
   )
 
 if (MFEM_USE_MPI)
@@ -73,8 +73,8 @@ if (MFEM_USE_MPI)
     ex28p.cpp
     ex29p.cpp
     ex30p.cpp
-    ex31p_proposed.cpp
-    ex32p_proposed.cpp
+    ex31p.cpp
+    ex32p.cpp
     )
 endif()
 
