--- a/tests/benchmarks/makefile
+++ b/tests/benchmarks/makefile
@@ -51,7 +51,11 @@ $($(TESTS)): \
 $(MFEM_LIB_FILE):
 	$(error The MFEM library is not built)
 
-clean: clean-build clean-exec
+tex:
+	xelatex -file-line-error -shell-escape -interaction nonstopmode -halt-on-error bench_tmop_cpu.tex
+	xelatex -file-line-error -shell-escape -interaction nonstopmode -halt-on-error bench_tmop_gpu.tex
+
+clean: clean-build clean-exec clean-tex
 
 clean-build:
 	rm -f *.o *~ $(SEQ_TESTS) $(PAR_TESTS)
@@ -60,3 +64,5 @@ clean-build:
 clean-exec:
 	@rm -f refined.mesh sol.gf
 
+clean-tex:
+	@rm -f *.aux *.log *.table *.gnuplot
