--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -47,6 +47,7 @@ set(UNIT_TESTS_SRCS
   mesh/test_pmesh.cpp
   mesh/test_periodic_mesh.cpp
   mesh/test_vtu.cpp
+  fem/common_get_mesh.cpp
   fem/test_1d_bilininteg.cpp
   fem/test_2d_bilininteg.cpp
   fem/test_3d_bilininteg.cpp
