--- a/examples/dpg_tests/makefile
+++ b/examples/dpg_tests/makefile
@@ -19,8 +19,8 @@ MFEM_LIB_FILE = mfem_is_not_built
 -include $(CONFIG_MK)
 
 SEQ_EXAMPLES = diffusion_blkfosls diffusion_fosls diffusion_primal_dpg \
-	 grad_div_primal_dpg	block_primal_dpg diffusion_uwdpg ejproblem
-PAR_EXAMPLES = pdiffusion_uwdpg
+	 grad_div_primal_dpg	diffusion_uwdpg convection_diffusion
+PAR_EXAMPLES = diffusion_uwdpgp convection_diffusionp
 
 ifeq ($(MFEM_USE_MPI),NO)
    EXAMPLES = $(SEQ_EXAMPLES)
