--- a/tests/benchmarks/makefile
+++ b/tests/benchmarks/makefile
@@ -51,9 +51,12 @@ $($(TESTS)): \
 $(MFEM_LIB_FILE):
 	$(error The MFEM library is not built)
 
-tex:
+cpu:
 	xelatex -file-line-error -shell-escape -interaction nonstopmode -halt-on-error bench_tmop_cpu.tex
+gpu:
 	xelatex -file-line-error -shell-escape -interaction nonstopmode -halt-on-error bench_tmop_gpu.tex
+ss:
+	xelatex -file-line-error -shell-escape -interaction nonstopmode -halt-on-error bench_tmop_ss.tex
 
 clean: clean-build clean-exec clean-tex
 
