--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,19 @@
 CMakeCache.txt
 CMakeFiles/
 
+# NSYS files
+*.nsys-rep
+
+# Benchmark files
+*.tex
+*.org
+*.aux
+*.log
+*.gnuplot
+*.table
+*.pdf
+*.png
+
 # Backup files
 *~
 
