Replaced the current HIP CMake support with one based on the CMake support provided by the ROCm installation.
Added a number of smaller fixes and tweaks related to HYPRE + HIP
support and the CMake build system.

Added support out-of-source GNU make builds in miniapps/shifted.

In the Gitlab CI for Lassen, added a job that tests a build where
both MFEM and HYPRE are built with CUDA.

--- a/miniapps/autodiff/CMakeLists.txt
+++ b/miniapps/autodiff/CMakeLists.txt
@@ -46,8 +46,8 @@ set(PARADIFF_COMMON_FILES
 	EXTRA_SOURCES ${PARADIFF_COMMON_SOURCES} ${SEQADIFF_COMMON_SOURCES}
 	EXTRA_HEADERS ${PARADIFF_COMMON_HEADERS} ${SEQADIFF_COMMON_HEADERS})
 
-message(STATUS "PARADIFF_COMMON_FILES: ${PARADIFF_COMMON_FILES}")
-message(STATUS "SEQADIFF_COMMON_FILES: ${SEQADIFF_COMMON_FILES}")
+# message(STATUS "PARADIFF_COMMON_FILES: ${PARADIFF_COMMON_FILES}")
+# message(STATUS "SEQADIFF_COMMON_FILES: ${SEQADIFF_COMMON_FILES}")
 
 add_mfem_miniapp(paradiff
      MAIN par_example.cpp
