--- a/miniapps/mtop/CMakeLists.txt
+++ b/miniapps/mtop/CMakeLists.txt
@@ -43,8 +43,8 @@ set(PARMTOP_COMMON_FILES
 	EXTRA_SOURCES ${PARMTOP_COMMON_SOURCES} ${SEQMTOP_COMMON_SOURCES}
 	EXTRA_HEADERS ${PARMTOP_COMMON_HEADERS} ${SEQMTOP_COMMON_HEADERS})
 
-message(STATUS "PARMTOP_COMMON_FILES: ${PARMTOP_COMMON_FILES}")
-message(STATUS "SEQMTOP_COMMON_FILES: ${SEQMTOP_COMMON_FILES}")
+# message(STATUS "PARMTOP_COMMON_FILES: ${PARMTOP_COMMON_FILES}")
+# message(STATUS "SEQMTOP_COMMON_FILES: ${SEQMTOP_COMMON_FILES}")
 
 add_mfem_miniapp(parheat
      MAIN parheat.cpp
