Fix some issues with the tests.
Sync some tests between GNU make and CMake.

Add tests for the (p)lor_solvers miniapp.

--- a/miniapps/navier/CMakeLists.txt
+++ b/miniapps/navier/CMakeLists.txt
@@ -71,4 +71,14 @@ if (MFEM_USE_MPI)
           COMMENT "copy: ${MESH_FILE}")
     endforeach()
   endif ()
+
+  if (MFEM_ENABLE_TESTING)
+    foreach (test "mms" "kovasznay" "tgv")
+      add_test(NAME navier_${test}_np${MFEM_MPI_NP}
+        COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MFEM_MPI_NP}
+        ${MPIEXEC_PREFLAGS}
+        $<TARGET_FILE:navier_${test}> -cr -no-vis
+        ${MPIEXEC_POSTFLAGS})
+    endforeach()
+endif()
 endif ()
