--- a/miniapps/performance/CMakeLists.txt
+++ b/miniapps/performance/CMakeLists.txt
@@ -54,7 +54,7 @@ if (MFEM_USE_MPI)
     EXTRA_OPTIONS ${PERFORMANCE_CXX_OPTIONS})
 
   if (MFEM_ENABLE_TESTING)
-    add_test(NAME performance_ex1p_np=4
+    add_test(NAME performance_ex1p_np=${MFEM_MPI_NP}
       COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MFEM_MPI_NP}
       ${MPIEXEC_PREFLAGS} $<TARGET_FILE:performance_ex1p> -no-vis -rs 2
       ${MPIEXEC_POSTFLAGS})
