Update the Gitlab CI 'build-and-test' jobs to use a new commit from the mfem-uberenv repo that updates spack to v0.17.1 bringing newer versions of some dependencies, e.g. hypre v2.23.0.

--- a/.gitlab/quartz-build-and-test.yml
+++ b/.gitlab/quartz-build-and-test.yml
@@ -59,7 +59,7 @@ opt_par_gcc_6_1_0_sundials:
 
 opt_par_gcc_6_1_0_petsc:
   variables:
-    SPEC: "%gcc@6.1.0 +petsc ^petsc+mumps"
+    SPEC: "%gcc@6.1.0 +petsc ^petsc+mumps~superlu-dist"
   extends: .build_and_test_on_quartz
 
 opt_par_gcc_6_1_0_pumi:
