Navier: factor out code to compute curl and curl-curl

--- a/miniapps/navier/CMakeLists.txt
+++ b/miniapps/navier/CMakeLists.txt
@@ -12,10 +12,12 @@
 if (MFEM_USE_MPI)
   list(APPEND NAVIER_COMMON_SOURCES
       navier_solver.cpp
-      ortho_solver.cpp)
+      ortho_solver.cpp
+      compute_curl.hpp)
   list(APPEND NAVIER_COMMON_HEADERS
       navier_solver.hpp
-      ortho_solver.hpp)
+      ortho_solver.hpp
+      compute_curl.hpp)
 
   convert_filenames_to_full_paths(NAVIER_COMMON_SOURCES)
   convert_filenames_to_full_paths(NAVIER_COMMON_HEADERS)
@@ -53,7 +55,7 @@ if (MFEM_USE_MPI)
     MAIN navier_3dfoc.cpp
     ${NAVIER_COMMON_FILES}
     LIBRARIES mfem)
-  
+
 
   add_mfem_miniapp(navier_turbchan
     MAIN navier_turbchan.cpp
