--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,8 @@ examples/ex1[04-9]
 examples/ex1[0-9]p
 examples/ex2[0-9]
 examples/ex2[0-9]p
-examples/ex30
-examples/ex30p
+examples/ex3[0-1]
+examples/ex3[0-1]p
 
 examples/refined.mesh
 examples/displaced.mesh
