Batched LOR: cleanup

--- a/fem/CMakeLists.txt
+++ b/fem/CMakeLists.txt
@@ -69,6 +69,11 @@ set(SRCS
   ceed/util.cpp
   linearform.cpp
   lininteg.cpp
+  lor/lor.cpp
+  lor/lor_batched.cpp
+  lor/lor_h1.cpp
+  lor/lor_nd.cpp
+  lor/lor_nodal_interp.cpp
   multigrid.cpp
   nonlinearform.cpp
   nonlinearform_ext.cpp
