--- a/miniapps/mtopel/CMakeLists.txt
+++ b/miniapps/mtopel/CMakeLists.txt
@@ -73,4 +73,9 @@ add_mfem_miniapp(mtop_top
      ${PARADIFF_COMMON_FILES}
      LIBRARIES mfem)
 
+add_mfem_miniapp(shoot_test
+     MAIN shooting_test.cpp
+     ${PARADIFF_COMMON_FILES}
+     LIBRARIES mfem)
+
 endif ()
