--- a/miniapps/plasma/makefile
+++ b/miniapps/plasma/makefile
@@ -37,7 +37,7 @@ endif
 COMMON_O=../common/fem_extras.o ../common/pfem_extras.o \
 	../common/mesh_extras.o \
 	cold_plasma_dielectric_solver.o cold_plasma_dielectric_coefs.o \
-	cold_plasma_dielectric_dh_solver.o plasma.o
+	cold_plasma_dielectric_dh_solver.o g_eqdsk_data.o
 
 # Remove built-in rules
 %: %.cpp
